@@ -18,6 +18,7 @@
  - Once `unesc_raw()` is gone, we'll support only the hex escape format.
  - Work around broken `thread_local` in MinGW gcc < 11.1.
  - `pqxx::blob` now supports `std::filesystem::path`.
+ - Fixed check against header/lib version mismatch: `check_pqxx_version_7_6`
 7.5.2
  - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
 7.5.1
